--- a/MDK-ARM/Quad_step_motor.uvprojx
+++ b/MDK-ARM/Quad_step_motor.uvprojx
@@ -534,6 +534,16 @@
               <FileType>1</FileType>
               <FilePath>..\User\control.c</FilePath>
             </File>
+            <File>
+              <FileName>pelco_d_protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\pelco_d_protocol.c</FilePath>
+            </File>
+            <File>
+              <FileName>pelco_d_integration_example.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\User\pelco_d_integration_example.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
